crates/phynix-parse/tests/stmt/snapshots/tests__stmt__r#if__colon_syntax_if_with_else_and_semicolon_after_endif.snap
---
source: crates/phynix-parse/tests/stmt/if.rs
assertion_line: 96
expression: script
---
items:
  - If:
      cond:
        NameRef:
          name:
            absolute: false
            parts:
              - {}
      then_block:
        items:
          - Echo:
              exprs:
                - IntLiteral:
                    value: 1
      else_if_blocks: []
      else_block:
        items:
          - Echo:
              exprs:
                - IntLiteral:
                    value: 2
