crates/phynix-parse/tests/stmt/snapshots/tests__stmt__r#if__colon_syntax_if_without_else_is_parsed_and_endif_semicolon_optional.snap
---
source: crates/phynix-parse/tests/stmt/if.rs
assertion_line: 85
expression: script
---
items:
  - If:
      cond:
        NameRef:
          name:
            absolute: false
            parts:
              - {}
      then_block:
        items:
          - Echo:
              exprs:
                - IntLiteral:
                    value: 1
      else_if_blocks: []
      else_block: ~
