crates/phynix-parse/tests/stmt/snapshots/tests__stmt__r#if__else_if_is_parsed_as_nested_if_in_else_block.snap
---
source: crates/phynix-parse/tests/stmt/if.rs
assertion_line: 75
expression: script
---
items:
  - If:
      cond:
        NameRef:
          name:
            absolute: false
            parts:
              - {}
      then_block:
        items:
          - Echo:
              exprs:
                - IntLiteral:
                    value: 1
      else_if_blocks: []
      else_block:
        items:
          - If:
              cond:
                NameRef:
                  name:
                    absolute: false
                    parts:
                      - {}
              then_block:
                items:
                  - Echo:
                      exprs:
                        - IntLiteral:
                            value: 2
              else_if_blocks: []
              else_block: ~
