crates/phynix-parse/tests/stmt/snapshots/tests__stmt__r#if__elseif_accepts_brace_block.snap
---
source: crates/phynix-parse/tests/stmt/if.rs
assertion_line: 43
expression: script
---
items:
  - If:
      cond:
        NameRef:
          name:
            absolute: false
            parts:
              - {}
      then_block:
        items:
          - Echo:
              exprs:
                - IntLiteral:
                    value: 1
      else_if_blocks:
        - - NameRef:
              name:
                absolute: false
                parts:
                  - {}
          - items:
              - Echo:
                  exprs:
                    - IntLiteral:
                        value: 2
      else_block: ~
