crates/phynix-parse/tests/stmt/snapshots/tests__stmt__r#if__multiple_elseifs_and_else_single_stmt.snap
---
source: crates/phynix-parse/tests/stmt/if.rs
assertion_line: 63
expression: script
---
items:
  - If:
      cond:
        NameRef:
          name:
            absolute: false
            parts:
              - {}
      then_block:
        items:
          - Echo:
              exprs:
                - IntLiteral:
                    value: 1
      else_if_blocks:
        - - NameRef:
              name:
                absolute: false
                parts:
                  - {}
          - items:
              - Echo:
                  exprs:
                    - IntLiteral:
                        value: 2
        - - NameRef:
              name:
                absolute: false
                parts:
                  - {}
          - items:
              - Echo:
                  exprs:
                    - IntLiteral:
                        value: 3
      else_block:
        items:
          - Echo:
              exprs:
                - IntLiteral:
                    value: 4
